Withdraw fixes (#87)
